--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -312,7 +312,7 @@
     grid-template-columns: repeat(2, 1fr);
     width: 1220px;
     padding: 0;
-    margin: 0 auto;
+    margin: auto;
   }
 
   .form__title,
