--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,15 +1,44 @@
 .form {
   border-top: 1px solid $light-special-gray;
   text-align: left;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    column-gap: 80px;
+    grid-template-columns: repeat(2, 1fr);
+    width: 1220px;
+    padding: 0;
+    margin: auto;
+  }
 }
 
 .form__container {
   margin-bottom: 32px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 60px;
+  }
 }
 
 .form__title {
   @include common-title;
   margin: 27px 0 37px 0;
+
+  @media (min-width: $tablet-width) {
+    @include common-title-big;
+    margin: 27px 0 54px 0;
+    grid-column: 1 / 3;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 3;
+  }
 }
 
 .form__text {
@@ -21,6 +50,15 @@
   margin-bottom: 39px;
   padding-right: 20px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 66px;
+    text-transform: uppercase;
+    grid-column: 1 / 3;
+  }
 }
 
 .form__text-label {
@@ -187,32 +225,7 @@
 }
 
 @media (min-width: $tablet-width) {
-  .form {
-    border: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .form__container {
-    margin-bottom: 60px;
-  }
-
   .form__module {
-    grid-column: 1 / 3;
-  }
-
-  .form__title {
-    @include common-title-big;
-    margin: 27px 0 54px 0;
-    grid-column: 1 / 3;
-  }
-
-  .form__text {
-    @include common-text-big;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 66px;
-    text-transform: uppercase;
     grid-column: 1 / 3;
   }
 
@@ -305,17 +318,23 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .form {
-    display: grid;
-    column-gap: 80px;
-    grid-template-columns: repeat(2, 1fr);
-    width: 1220px;
-    padding: 0;
-    margin: auto;
-  }
+.form__submit-note {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0;
+  margin-bottom: 32px;
+  text-align: center;
 
-  .form__title,
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+
   .form__text,
   .form__module--contacts,
   .form__module--comment,
