--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -35,10 +35,6 @@
     margin: 27px 0 54px 0;
     grid-column: 1 / 3;
   }
-
-  @media (min-width: $desktop-width) {
-    grid-column: 1 / 3;
-  }
 }
 
 .form__text {
@@ -61,6 +57,16 @@
   }
 }
 
+.form__module {
+  @include form-common-text;
+  color: $dark-gray;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+    grid-column: 1 / 3;
+  }
+}
+
 .form__text-label {
   flex-shrink: 0;
   font-size: 16px;
@@ -68,6 +74,10 @@
   color: $dark-gray;
   text-transform: uppercase;
   cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
 }
 
 .form__text-input {
@@ -79,11 +89,11 @@
   font-family: inherit;
   font-size: 16px;
   text-transform: uppercase;
-}
 
-.form__module {
-  @include form-common-text;
-  color: $dark-gray;
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+    padding: 11px 20px;
+  }
 }
 
 .form__module--info {
@@ -91,6 +101,10 @@
   margin: 0;
   padding: 0;
   margin-bottom: 46px;
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+  }
 }
 
 .form__module--diet {
@@ -98,6 +112,11 @@
   margin: 0;
   padding: 0;
   margin-bottom: 45px;
+
+  @media (min-width: $desktop-width) {
+    box-shadow: 0 0 0 1px $very-light-gray;
+    grid-column: 2 / 3;
+  }
 }
 
 .form__module--contacts {
@@ -105,6 +124,14 @@
   margin: 0;
   padding: 0;
   margin-bottom: 45px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 65px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 3;
+  }
 }
 
 .form__module--comment {
@@ -112,7 +139,13 @@
   margin: 0;
   padding: 0;
   margin-bottom: 45px;
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 3;
+  }
 }
+
+/////////////////////////////////////////////////////
 
 .form__module-list {
   @include list-reset;
@@ -128,34 +161,6 @@
   margin-bottom: 0;
 }
 
-.form__text-input::placeholder {
-  @include form-common-text;
-  color: $dark-gray;
-}
-
-.form__field-input::placeholder {
-  @include form-common-text;
-  color: $dark-gray;
-}
-
-.form__comment-input {
-  @include form-common-text;
-  color: $dark-gray;
-  min-width: 100%;
-  min-height: 150px;
-  padding: 14px;
-  box-sizing: border-box;
-}
-
-.form__button {
-  @include product-title;
-  border: none;
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 21px;
-}
-
 .form__module-radio {
   margin-bottom: 19px;
 }
@@ -168,18 +173,84 @@
   padding: 6px 0 6px 15px;
 }
 
+.form__checkbox-label {
+  padding: 6px 0 6px 15px;
+}
+
+////////////////////////////////////////////////////////////
+
+.form__text-input::placeholder {
+  @include form-common-text;
+  color: $dark-gray;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
+}
+
+.form__field-input::placeholder {
+  @include form-common-text;
+  color: $dark-gray;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
+}
+
+.form__comment-input {
+  @include form-common-text;
+  color: $dark-gray;
+  min-width: 100%;
+  min-height: 150px;
+  padding: 14px;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+    color: $dark-gray;
+    min-width: 100%;
+    min-height: 175px;
+    padding: 11px;
+  }
+}
+
+.form__button {
+  @include product-title;
+  border: none;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    @include form-button;
+  }
+}
+
 .form__module-legend {
   font-size: 24px;
   line-height: 26px;
   text-transform: none;
+
+  @media (min-width: $tablet-width) {
+    @include common-title;
+    text-transform: none;
+  }
 }
 
 .legend-contacts {
   margin-bottom: 35px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 76px;
+  }
 }
 
 .legend-comment {
   margin-bottom: 38px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 87px;
+  }
 }
 
 .form__field-label {
@@ -189,6 +260,10 @@
   color: $dark-gray;
   text-transform: uppercase;
   cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
 }
 
 .form__field-input {
@@ -200,121 +275,47 @@
   font-family: inherit;
   font-size: 16px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
 }
 
 .legent-extra {
   margin-bottom: 38px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 57px;
+  }
 }
 
 .form__module--extra {
   border: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 3;
+  }
 }
 
 .form__module-check {
   margin-bottom: 13px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
 
 .form__module-check:last-child {
   margin-bottom: 34px;
-}
 
-.form__checkbox-label {
-  padding: 6px 0 6px 15px;
-}
-
-@media (min-width: $tablet-width) {
-  .form__module {
-    grid-column: 1 / 3;
-  }
-
-  .module-info {
-    margin-bottom: 72px;
-  }
-
-  .module-diet {
-    margin-bottom: 65px;
-    border: 1px solid $very-light-gray;
-  }
-
-  .form__module--contacts {
-    margin-bottom: 65px;
-  }
-
-  .form__module--extra {
-    margin-bottom: 52px;
-  }
-
-  .module-comment {
-    margin-bottom: 65px;
-  }
-
-  .form__module,
-  .form__text-label,
-  .form__field-label,
-  .form__field-input {
-    @include common-text-big;
-  }
-
-  .form__text-input {
-    @include common-text-big;
-    padding: 11px 20px;
-  }
-
-  .form__text-input::placeholder {
-    @include common-text-big;
-  }
-
-  .form__field-input::placeholder {
-    @include common-text-big;
-  }
-
-  .form__module-legend {
-    @include common-title;
-    text-transform: none;
-  }
-
-  .legend-contacts {
-    margin-bottom: 76px;
-  }
-
-  .legend-comment {
-    margin-bottom: 87px;
-  }
-
-  .legent-extra {
-    margin-bottom: 57px;
-  }
-
-  .form__comment-input {
-    @include common-text-big;
-    color: $dark-gray;
-    min-width: 100%;
-    min-height: 175px;
-    padding: 11px;
-  }
-
-  .form__comment-input::placeholder {
-    @include common-text-big;
-  }
-
-  .module-list--extra {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 32px 123px;
-  }
-
-  .form__module-check {
+  @media (min-width: $tablet-width) {
     margin: 0;
-  }
-
-  .form__module-check:last-child {
-    margin: 0;
-  }
-
-  .form__button {
-    @include form-button;
   }
 }
 
@@ -331,38 +332,54 @@
     font-size: 16px;
     line-height: 16px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
 }
 
-@media (min-width: $desktop-width) {
-
-  .form__text,
-  .form__module--contacts,
-  .form__module--comment,
-  .form__module--extra {
-    grid-column: 1 / 3;
+.module-info {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 72px;
   }
+}
 
-  .form__module--contacts .form__module-list {
+.module-diet {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 65px;
+    border: 1px solid $very-light-gray;
+  }
+}
+
+.module-comment {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 65px;
+  }
+}
+
+.form__comment-input::placeholder {
+  @media (min-width: $tablet-width) {
+    @include common-text-big;
+  }
+}
+
+.module-list--extra {
+  @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 80px;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px 123px;
   }
 
-  .form__module--diet {
-    box-shadow: 0 0 0 1px $very-light-gray;
-    grid-column: 2 / 3;
-  }
-
-  .module-list--extra {
+  @media (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     margin-bottom: 52px;
   }
+}
 
-  .form__submit-note {
-    text-align: left;
-  }
-
-  .form__module--info {
-    grid-column: 1 / 2;
+.form__module--contacts .form__module-list {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 80px;
   }
 }
