--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,6 +1,10 @@
 .main-nav {
   background-color: $base-white;
   position: relative;
+
+  @media (min-width: $desktop-width) {
+    background-color: transparent;
+  }
 }
 
 .main-nav__list {
@@ -9,14 +13,31 @@
   font-size: 20px;
   line-height: 20px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    column-gap: 33px;
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
 
 .main-nav__item {
   border-top: 1px solid $light-gray;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
 }
 
 .main-nav__item:last-child {
   border-bottom: 1px solid $light-gray;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: none;
+  }
 }
 
 .main-nav__link {
@@ -25,6 +46,11 @@
   text-transform: uppercase;
   padding-top: 22px;
   padding-bottom: 24px;
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .main-nav__link:hover {
@@ -58,30 +84,10 @@
   min-height: 0;
 }
 
-// Стили для планшетной версии сайта.
-
 @media (min-width: $tablet-width) {
-  .main-nav {
-    justify-content: flex-end;
-    position: relative;
-  }
-
-  .main-nav__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    column-gap: 33px;
-    font-size: 18px;
-    line-height: 24px;
-  }
-
   .main-nav--is-close .main-nav__list {
     display: flex;
     flex-wrap: wrap;
-  }
-
-  .main-nav__item {
-    border: none;
   }
 
   .main-nav__list--active::after {
@@ -103,35 +109,16 @@
     height: 2px;
     border-bottom: 2px solid $base-green;
   }
+}
 
-  .main-nav__item:last-child {
-    border-bottom: none;
+.main-nav__list--index a {
+  @media (min-width: $desktop-width) {
+    color: $base-white;
   }
 }
 
-// Стили для десктопной версии сайта.
-
-@media (min-width: $desktop-width) {
-  .main-nav__list {
-    position: relative;
-    background-color: transparent;
-    z-index: 1;
-  }
-
-  .main-nav__link {
-    font-size: 20px;
-    line-height: 30px;
-  }
-
-  .main-nav__list--index a {
-    color: $base-white;
-  }
-
-  .main-nav {
-    background-color: transparent;
-  }
-
-  .main-nav__list--index .main-nav__link--active::after {
+.main-nav__list--index .main-nav__link--active::after {
+  @media (min-width: $desktop-width) {
     content: "";
     position: relative;
     display: block;
